<?xml version="1.0"?>
<package>
  <name>qt_ros_demo01</name>
  <version>0.1.0</version>
  <description>

     qt_ros_demo01

  </description>
  <maintainer email="menyao@gmail.com">lj</maintainer>
  <author>lj</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <!-- 添加rosmasg、std_msg、message_generation -->
  <build_depend>std_msgs</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-dev</run_depend>
  <!-- 添加rosmsg、std_msg、message_runtime  -->
  <run_depend>std_msgs</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>message_runtime</run_depend>


   <!-- 
    格式 1 ：run_depend
    格式 2 ： exce_depend （以前对应的是 run_depend） 
  但该项目中仍然使用 xml格式 1
  -->
</package>
